[gd_scene load_steps=19 format=4 uid="uid://br3rgvvyyv5n6"]

[ext_resource type="PackedScene" uid="uid://ocfk1qjcqtc4" path="res://Scenes/Blocks/brick.tscn" id="1_o6wq3"]
[ext_resource type="Script" uid="uid://dr4tfvdwfhdwn" path="res://Scripts/Level.gd" id="1_q0pi4"]
[ext_resource type="Script" path="res://Scripts/ThemeManager.gd" id="2_q0pi4"]
[ext_resource type="PackedScene" uid="uid://lnwx6fnxmvvj" path="res://Scenes/question_block.tscn" id="2_w4w3d"]
[ext_resource type="TileSet" uid="uid://d2d88m0rb8jmc" path="res://Sprites/Tilesets/Overworld/Overworld.tres" id="3_q0pi4"]
[ext_resource type="TileSet" uid="uid://bxmp0vsvcclhb" path="res://Sprites/Gizmos/Pipes.tres" id="4_noyq2"]
[ext_resource type="TileSet" uid="uid://chak12uhpm0q1" path="res://Sprites/Tilesets/Overworld/Semisolid.tres" id="5_saxwf"]
[ext_resource type="PackedScene" uid="uid://bem03d4usrw1w" path="res://Scenes/player.tscn" id="7_ftxpn"]
[ext_resource type="PackedScene" uid="uid://t3lmwf8gtcxe" path="res://Scenes/Items/coin.tscn" id="7_w4w3d"]
[ext_resource type="PackedScene" uid="uid://0rjn3gu5tf54" path="res://Scenes/Backgrounds/overworld.tscn" id="8_28jxv"]
[ext_resource type="PackedScene" uid="uid://cxkafas67lmod" path="res://Scenes/cameralimitright.tscn" id="10_28jxv"]
[ext_resource type="PackedScene" uid="uid://bfjxybinsknj5" path="res://Scenes/cameralimitleft.tscn" id="10_ftxpn"]
[ext_resource type="PackedScene" uid="uid://citjnab4fdvsq" path="res://Scenes/Enemies/goomba.tscn" id="10_o6wq3"]
[ext_resource type="AudioStream" uid="uid://pb52075hxihl" path="res://Audio/BGM/Overworld.ogg" id="10_x1pt7"]
[ext_resource type="Script" uid="uid://bss0wgcxwfixx" path="res://Scripts/Camera.gd" id="11_saxwf"]
[ext_resource type="PackedScene" uid="uid://htr458mvxcyt" path="res://Scenes/cameragroundlimit.tscn" id="11_xecmd"]
[ext_resource type="PackedScene" uid="uid://bpt12tgpm70ys" path="res://Scenes/level_entrance.tscn" id="12_6ywuv"]
[ext_resource type="PackedScene" uid="uid://dgrkg4fljhhtx" path="res://Scenes/UI/hud.tscn" id="14_noyq2"]

[node name="1-1" type="Node2D"]
script = ExtResource("1_q0pi4")

[node name="ThemeManager" type="Node2D" parent="."]
process_mode = 3
script = ExtResource("2_q0pi4")

[node name="TerrainTileMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAQAAAAAAAAAAAAAAAQAAEAAAAAAAEAAAARAAAAAAABAAAAAAARAAEAAAABAAEAAAASAAAAAAABAAAAAAASAAEAAAABAAEAAAATAAAAAAABAAAAAAATAAEAAAABAAEAAAAUAAAAAAABAAAAAAAUAAEAAAABAAEAAAAVAAAAAAABAAAAAAAVAAEAAAABAAEAAAAWAAAAAAABAAAAAAAWAAEAAAABAAEAAAAXAAAAAAABAAAAAAAXAAEAAAABAAEAAAAYAAAAAAABAAAAAAAYAAEAAAABAAEAAAAZAAAAAAABAAAAAAAZAAEAAAABAAEAAAAaAAAAAAABAAAAAAAaAAEAAAABAAEAAAAbAAAAAAABAAAAAAAbAAEAAAABAAEAAAAcAAAAAAABAAAAAAAcAAEAAAABAAEAAAAdAAAAAAABAAAAAAAdAAEAAAABAAEAAAAeAAAAAAABAAAAAAAeAAEAAAABAAEAAAAfAAAAAAABAAAAAAAfAAEAAAABAAEAAAAgAAAAAAABAAAAAAAgAAEAAAABAAEAAAAhAAAAAAABAAAAAAAhAAEAAAABAAEAAAAiAAAAAAABAAAAAAAiAAEAAAABAAEAAAAjAAAAAAABAAAAAAAjAAEAAAABAAEAAAAkAAAAAAABAAAAAAAkAAEAAAABAAEAAAAlAAAAAAABAAAAAAAlAAEAAAABAAEAAAAmAAAAAAABAAAAAAAmAAEAAAABAAEAAAAnAAAAAAABAAAAAAAnAAEAAAABAAEAAAAoAAAAAAABAAAAAAAoAAEAAAABAAEAAAApAAAAAAABAAAAAAApAAEAAAABAAEAAAAqAAAAAAABAAAAAAAqAAEAAAABAAEAAAArAAAAAAABAAAAAAArAAEAAAABAAEAAAAsAAAAAAABAAAAAAAsAAEAAAABAAEAAAAtAAAAAAABAAAAAAAtAAEAAAABAAEAAAAuAAAAAAABAAAAAAAuAAEAAAABAAEAAAAvAAAAAAABAAAAAAAvAAEAAAABAAEAAAAwAAAAAAABAAAAAAAwAAEAAAABAAEAAAAxAAAAAAABAAAAAAAxAAEAAAABAAEAAAAyAAAAAAABAAAAAAAyAAEAAAABAAEAAAAzAAAAAAABAAAAAAAzAAEAAAABAAEAAAA0AAAAAAABAAAAAAA0AAEAAAABAAEAAAA1AAAAAAABAAAAAAA1AAEAAAABAAEAAAA2AAAAAAABAAAAAAA2AAEAAAABAAEAAAA3AAAAAAABAAAAAAA3AAEAAAABAAEAAAA4AAAAAAABAAAAAAA4AAEAAAABAAEAAAA5AAAAAAABAAAAAAA5AAEAAAABAAEAAAA6AAAAAAABAAAAAAA6AAEAAAABAAEAAAA7AAAAAAABAAAAAAA7AAEAAAABAAEAAAA8AAAAAAABAAAAAAA8AAEAAAABAAEAAAA9AAAAAAABAAAAAAA+AAAAAAABAAAAAAA/AAAAAAABAAAAAABAAAAAAAABAAAAAABBAAAAAAABAAAAAABCAAAAAAABAAAAAABDAAAAAAABAAAAAABEAAAAAAABAAAAAABFAAAAAAABAAAAAABGAAAAAAABAAAAAABHAP//AAAAAAAAAABIAP3/AAAAAAAAAABJAP3/AAABAAAAAABKAP3/AAABAAAAAABLAP3/AAABAAAAAABIAP7/AAAAAAEAAABIAP//AAABAAEAAABIAAAAAAABAAEAAABHAAAAAAABAAEAAABJAAAAAAABAAEAAABJAP7/AAABAAEAAABKAP7/AAABAAEAAABKAP//AAABAAEAAABJAP//AAABAAEAAABLAP//AAABAAEAAABLAP7/AAABAAEAAABKAAAAAAABAAEAAABLAAAAAAABAAEAAABMAAAAAAABAAEAAABMAP//AAABAAEAAABMAP7/AAABAAEAAAA9AAEAAAABAAEAAABAAAEAAAABAAEAAAA/AAEAAAABAAEAAABBAAEAAAABAAEAAAA+AAEAAAABAAEAAABKAAEAAAABAAEAAABJAAEAAAABAAEAAABIAAEAAAABAAEAAABHAAEAAAABAAEAAABGAAEAAAABAAEAAABFAAEAAAABAAEAAABEAAEAAAABAAEAAABDAAEAAAABAAEAAABCAAEAAAABAAEAAABLAAEAAAABAAEAAABMAAEAAAABAAEAAABMAP3/AAABAAAAAABNAP3/AAABAAAAAABOAP3/AAABAAAAAABPAP3/AAABAAAAAABQAP3/AAABAAAAAABRAP3/AAABAAAAAABSAP3/AAACAAAAAABSAP7/AAACAAEAAABSAP//AAACAAEAAABSAAAAAAACAAEAAABSAAEAAAACAAEAAABNAP7/AAABAAEAAABOAP7/AAABAAEAAABPAP7/AAABAAEAAABQAP7/AAABAAEAAABRAP7/AAABAAEAAABRAP//AAABAAEAAABRAAAAAAABAAEAAABRAAEAAAABAAEAAABQAAEAAAABAAEAAABNAAEAAAABAAEAAABOAAEAAAABAAEAAABNAAAAAAABAAEAAABOAAAAAAABAAEAAABNAP//AAABAAEAAABPAAEAAAABAAEAAABPAAAAAAABAAEAAABPAP//AAABAAEAAABOAP//AAABAAEAAABQAP//AAABAAEAAABQAAAAAAABAAEAAAATAP//AQAFAAAAAABLAPn/AAABAAMAAABMAPn/AAABAAMAAABNAPn/AAABAAMAAABOAPn/AAABAAMAAABPAPn/AAABAAMAAABQAPn/AAABAAMAAABRAPj/AAADAAAAAABRAPn/AAACAAIAAABKAPn/AAAAAAIAAABKAPj/AAADAAAAAAA+APj/AQAFAAAAAAA+APn/AQAFAAAAAABDAPj/AQAFAAAAAABDAPn/AQAFAAAAAABSAPz/AQAFAAAAAAA=")
tile_set = ExtResource("3_q0pi4")

[node name="PipeTileMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAA3AP7/BQAAAAEAAAA3AP//BQAAAAEAAAA4AP7/BQABAAEAAAA4AP//BQABAAEAAAA3AP3/BQAAAAAAAAA4AP3/BQABAAAAAAAtAP//BQACAAEAAAAuAP//BQADAAEAAAAtAP7/BQACAAAAAAAuAP7/BQADAAAAAAA=")
enabled = false
tile_set = ExtResource("4_noyq2")

[node name="SemisolidTileMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAVAPv/AAAAAAAAAAAcAPv/AAACAAAAAAAWAPv/AAABAAAAAAAXAPv/AAABAAAAAAAYAPv/AAABAAAAAAAZAPv/AAABAAAAAAAaAPv/AAABAAAAAAAbAPv/AAABAAAAAAAcAPz/AAACAAEAAAAcAP3/AAACAAEAAAAcAP7/AAAHAAAAAAAWAP7/AAAHAAAAAAAXAP7/AAAHAAAAAAAYAP7/AAAHAAAAAAAZAP7/AAAHAAAAAAAaAP7/AAAHAAAAAAAbAP7/AAAHAAAAAAAbAP3/AAABAAEAAAAbAPz/AAABAAEAAAAaAPz/AAABAAEAAAAZAPz/AAABAAEAAAAYAPz/AAABAAEAAAAXAPz/AAABAAEAAAAXAP3/AAABAAEAAAAYAP3/AAABAAEAAAAZAP3/AAABAAEAAAAaAP3/AAABAAEAAAAWAP3/AAABAAEAAAAWAPz/AAABAAEAAAAVAPz/AAAAAAEAAAAVAP3/AAAAAAEAAAAVAP//AAAHAAIAAAAcAP//AAAHAAIAAAAbAP//AAAHAAIAAAAaAP//AAAHAAIAAAAZAP//AAAHAAIAAAAYAP//AAAHAAIAAAAXAP//AAAHAAIAAAAWAP//AAAHAAIAAAAVAP7/AAAHAAAAAAAWAPn/AAADAAAAAAAWAPr/AAADAAEAAAAXAPr/AAAEAAEAAAAYAPr/AAAEAAEAAAAZAPr/AAAEAAEAAAAaAPr/AAAEAAEAAAAbAPr/AAAFAAEAAAAXAPn/AAAEAAAAAAAYAPn/AAAEAAAAAAAZAPn/AAAEAAAAAAAaAPn/AAAEAAAAAAAbAPn/AAAFAAAAAAAUAP7/AAAGAAAAAAAdAP7/AAAIAAAAAAAdAP//AAAIAAIAAAAUAP//AAAGAAIAAAAXAPb/AAAJAAAAAAAYAPf/AAAKAAEAAAAYAPj/AAAKAAEAAAAZAPf/AAAKAAEAAAAZAPj/AAAKAAEAAAAaAPf/AAALAAEAAAAaAPj/AAALAAEAAAAaAPb/AAALAAAAAAAYAPb/AAAKAAAAAAAZAPb/AAAKAAAAAAAXAPf/AAAJAAEAAAAXAPj/AAAJAAEAAAA9AP3/AAAAAAAAAAA+AP3/AAABAAAAAAA/AP3/AAABAAAAAABAAP3/AAABAAAAAABBAP3/AAABAAAAAABCAP3/AAABAAAAAABDAP3/AAABAAAAAABEAP3/AAACAAAAAABDAP7/AAABAAEAAABCAP7/AAABAAEAAABBAP7/AAABAAEAAABAAP7/AAABAAEAAAA/AP7/AAABAAEAAAA+AP7/AAABAAEAAAA9AP7/AAAAAAEAAAA9AP//AAAAAAEAAABEAP7/AAACAAEAAABEAP//AAACAAEAAABDAP//AAABAAEAAABCAP//AAABAAEAAABBAP//AAABAAEAAABAAP//AAABAAEAAAA/AP//AAABAAEAAAA+AP//AAABAAEAAAA+APr/AAAJAAAAAAA+APv/AAAJAAEAAAA+APz/AAAJAAEAAAA/APv/AAAKAAEAAAA/APz/AAAKAAEAAABAAPz/AAAKAAEAAABBAPz/AAAKAAEAAABCAPz/AAAKAAEAAABDAPz/AAALAAEAAABDAPv/AAALAAEAAABCAPv/AAAKAAEAAABBAPv/AAAKAAEAAABAAPv/AAAKAAEAAABDAPr/AAALAAAAAAA/APr/AAAKAAAAAABAAPr/AAAKAAAAAABBAPr/AAAKAAAAAABCAPr/AAAKAAAAAABAAPn/AAADAAAAAABBAPn/AAAFAAAAAAAtAP//AAAJAAIAAAAuAP//AAAKAAIAAAAvAP//AAAKAAIAAAAtAP3/AAAJAAAAAAAtAP7/AAAJAAEAAAAuAP3/AAAKAAAAAAAuAP7/AAAKAAEAAAAvAP3/AAAKAAAAAAAvAP7/AAAKAAEAAAAwAP3/AAAKAAAAAAAwAP7/AAAKAAEAAAAxAP3/AAALAAAAAAAxAP7/AAALAAEAAAAwAP//AAAKAAIAAAAxAP//AAALAAIAAAAxAPv/AAAAAAAAAAAxAPz/AAAAAAEAAAAyAPv/AAABAAAAAAAzAPv/AAABAAAAAAA0APv/AAACAAAAAAA0APz/AAACAAEAAAA0AP7/AAAJAAAAAAA0AP//AAAJAAIAAAA1AP//AAAKAAIAAAA2AP//AAAKAAIAAAA3AP//AAAKAAIAAAA4AP//AAAKAAIAAAA5AP//AAALAAIAAAA5AP7/AAALAAAAAAA1AP7/AAAKAAAAAAA2AP7/AAAKAAAAAAA3AP7/AAAKAAAAAAA4AP7/AAAKAAAAAAAyAPz/AAABAAEAAAAyAP3/AAABAAEAAAAyAP7/AAABAAEAAAAyAP//AAABAAEAAAAzAP7/AAABAAEAAAAzAP3/AAABAAEAAAAzAPz/AAABAAEAAAAzAP//AAABAAEAAAA0AP3/AAACAAEAAAA0APn/AAAGAAAAAAA0APr/AAAGAAEAAAA1APn/AAAHAAAAAAA2APn/AAAHAAAAAAA3APn/AAAIAAAAAAA3APr/AAAIAAEAAAA3APv/AAAIAAEAAAA3APz/AAAIAAEAAAA3AP3/AAAIAAEAAAA1AP3/AAAHAAEAAAA1APz/AAAHAAEAAAA2APz/AAAHAAEAAAA2APv/AAAHAAEAAAA2APr/AAAHAAEAAAA1APr/AAAHAAEAAAA1APv/AAAHAAEAAAA2AP3/AAAHAAEAAAA=")
tile_set = ExtResource("5_saxwf")

[node name="BrickBlock2" parent="." instance=ExtResource("1_o6wq3")]
position = Vector2(600, -39)

[node name="BrickBlock3" parent="." instance=ExtResource("1_o6wq3")]
position = Vector2(616, -39)
item_scene = ExtResource("7_w4w3d")
is_item_block = true

[node name="BrickBlock4" parent="." instance=ExtResource("1_o6wq3")]
position = Vector2(632, -39)

[node name="BrickBlock5" parent="." instance=ExtResource("1_o6wq3")]
position = Vector2(648, -39)

[node name="BrickBlock6" parent="." instance=ExtResource("1_o6wq3")]
position = Vector2(664, -39)

[node name="QuestionBlock" parent="." instance=ExtResource("2_w4w3d")]
position = Vector2(584, -39)
item_scene = ExtResource("7_w4w3d")

[node name="CameraLimitLeft" parent="." instance=ExtResource("10_ftxpn")]
position = Vector2(256, -10)

[node name="CameraLimitRight" parent="." instance=ExtResource("10_28jxv")]
position = Vector2(1472, -58)

[node name="CameraGroundLimit" parent="." instance=ExtResource("11_xecmd")]
position = Vector2(260.0002, -7.999998)
scale = Vector2(1, 0.182)

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(1085, -6)
offset = Vector2(0, -46)
zoom = Vector2(3, 3)
drag_top_margin = 1.0
drag_bottom_margin = 0.0
script = ExtResource("11_saxwf")

[node name="Player" parent="." instance=ExtResource("7_ftxpn")]
position = Vector2(911, -26)

[node name="BGM" type="AudioStreamPlayer2D" parent="Player"]
process_mode = 3
position = Vector2(0, -1)
stream = ExtResource("10_x1pt7")
autoplay = true

[node name="Overworld" parent="." instance=ExtResource("8_28jxv")]
position = Vector2(251, 150)

[node name="Goombrat" parent="." instance=ExtResource("10_o6wq3")]
position = Vector2(1242, -58)
floor_stop_on_slope = false
is_goombrat = true

[node name="Goombrat2" parent="." instance=ExtResource("10_o6wq3")]
position = Vector2(1028, -58)
is_goombrat = true

[node name="Goomba" parent="." instance=ExtResource("10_o6wq3")]
position = Vector2(1282, -122)

[node name="Goomba2" parent="." instance=ExtResource("10_o6wq3")]
position = Vector2(1042, -122)

[node name="QuestionBlock2" parent="." instance=ExtResource("2_w4w3d")]
position = Vector2(568, -39)
item_scene = ExtResource("7_w4w3d")

[node name="QuestionBlock3" parent="." instance=ExtResource("2_w4w3d")]
position = Vector2(552, -39)
item_scene = ExtResource("12_6ywuv")

[node name="HUD" parent="." instance=ExtResource("14_noyq2")]
